# usb_utility

./: Application.cpp  Application.h  CMakeLists.txt  DaemonUtil.cpp  DaemonUtil.h  DeviceInfo.h  DeviceTester.cpp  DeviceTester.h  README.md  ResultDisplay.cpp  ResultDisplay.h  UdevMonitor.cpp  UdevMonitor.h  main.cpp  Курсач ОСиСП.docx
usb_utility/: CMakeLists.txt
usb_utility/src/: logger.cpp  logger.h  main.cpp  usb_detector.cpp  usb_detector.h  usb_lister.cpp  usb_lister.h  utils.h
пояснительная записка/: Курсач ОСиСП.docx
